test: Testing park endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 management.endpoints.web.exposure.include=health,info,metrics,env
+#spring.security.user.name=admin
+#spring.security.user.password=admin
+#spring.security.user.roles=ADMIN
