feature: Complete User authentication
Complete user authentication and authorization features plus park creation by the admin

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -5,6 +5,6 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.security.user.name=testuser
-spring.security.user.password=testpass
+spring.security.user.name=admin@example.com
+spring.security.user.password=adminPass123
 spring.security.user.roles=ADMIN
