feature: Upgraded authentication flow

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,12 @@ spring.application.name=ParkPro
 spring.datasource.url=jdbc:postgresql://localhost:5432/park-pro
 spring.datasource.username=eric
 spring.datasource.password=Hirwa123!
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=hirwajeric@gmail.com
+spring.mail.password=gjif smvy mhxb jkem
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
