--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.application.name=ParkPro
-spring.datasource.url=jdbc:postgresql://localhost:5432/park-pro
+spring.datasource.url=jdbc:postgresql://localhost:5432/parkpro
 spring.datasource.username=eric
-spring.datasource.password=Hirwa123!
+spring.datasource.password=hirwa123!
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=parkprogabon@gmail.com
-spring.mail.password=bplh zbti uzdb ilym 
+spring.mail.username=hirwajeaneric25@gmail.com
+spring.mail.password=kkhq uqdg vahp edbq
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 management.endpoints.web.exposure.include=health,info,metrics,env
