--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
             <version>2.18.2</version>
         </dependency>
         <dependency>
+            <groupId>me.paulschwarz</groupId>
+            <artifactId>spring-dotenv</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.stripe</groupId>
             <artifactId>stripe-java</artifactId>
             <version>29.0.0</version>
